Fixed image spacing.

--- a/css/buddyblocks.css
+++ b/css/buddyblocks.css
@@ -457,7 +457,7 @@ video.photosection_video{
 }
 
 .photosection :nth-child(-n+2){
-  padding-right: 1.5em;
+  margin-right: 1.5em;
 }
 
 #reflection{
